updated some classes to work with the plugin update